kubernetes/apps/monitoring/kube-prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: Alert Manager
    hajimari.io/icon: alert-decagram
    hajimari.io/group: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "alert-manager.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: prometheus-alertmanager
          port: 9093
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: Grafana
    hajimari.io/icon: monitor-dashboard
    hajimari.io/group: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "grafana.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: Prometheus
    hajimari.io/icon: database-search
    hajimari.io/group: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "prometheus.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: prometheus-prometheus
          port: 9090
